<resources>
    <string name="app_name">MOV</string>
    <string name="Lewati">Lewati</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_description">Lebih mudah untuk mengetahui \n film yang sedang tampil.</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_two">Tidak khawatir ketinggalan \n update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_two">Gunakan e-wallet untuk \n transaksi tiket nonton.</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang\nRohman Beny</string>
    <string name="simpan">Simpan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">PILIH BANGKU</string>
    <string name="pilih_bangku_dua">Pilih Bangku</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="total">Total Harus Dibayar</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="desc_succes_beli">Tiket telah berhasil dibeli dan\nselamat menikmati film</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="my_wallet">My Wallet</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history">History</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="aploud_nanti">Aploud Nanti</string>
    <string name="totalbalance">Total Balance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Keluar</string>
    <string name="top_up">Top Up</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="sukses_topup">Tiket berhasil dibeli\nSelamat menikmati film</string>
</resources>